--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -21,6 +21,10 @@
 	tr:nth-child(even) {
 	  background-color: #dddddd;
 	}
+	
+	td:nth-child(){
+		border: none;
+	}
   </style>
   
   <script type="text/javascript">
@@ -41,6 +45,7 @@
     		<th>ID</th>
     		<th>Name</th>
     		<th>Roles</th>
+    		<th></th>
     	</tr>
     	<tr th:each = "user : ${users}">
     		<td th:text = "${user.id}">user_id</td>
